# factory

./: .gitignore  CMakeLists.txt  README.md
assets/models/chipsbag/: chips2.mtl
sigel/: BufferUtils.hpp  Camera.cpp  Camera.hpp  Debug.hpp  Device.cpp  Device.hpp  EditorUI.cpp  EditorUI.hpp  GameObject.cpp  GameObject.hpp  GpuAllocator.cpp  GpuAllocator.hpp  IScene.hpp  Input.hpp  InputManager.cpp  InputManager.hpp  Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  Mesh.hpp  Object.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  ShaderManager.cpp  ShaderManager.hpp  SigelEngine.cpp  SigelEngine.hpp  Swapchain.cpp  Swapchain.hpp  Transform.hpp  Utils.hpp  (+6 more)
sigel/shaders/: compile.bat  shader2.slang  slang2.spv
sigel/vkapi/: Buffer.h  Debug.hpp  Device.cpp  Device.hpp  GpuAllocator.cpp  GpuAllocator.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Swapchain.cpp  Swapchain.hpp  VulkanContext.hpp  WindowSurface.cpp  WindowSurface.hpp  vma.cpp
src/: TestScene.cpp  TestScene.hpp  main.cpp
